--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">spotidemo</string>
     <string name="action_settings">Settings</string>
-    <string name="login">Login</string>
+    <string name="login">Log in with Spotify</string>
 </resources>
